fix: button and navbar opacity reduced
opacity not visible enough, reduced by 10%

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -67,7 +67,7 @@
   }
   
   .button-class {
-    background-color: rgba(0, 0, 0, 0.9) !important;
+    background-color: rgba(0, 0, 0, 0.8) !important;
     color: orange;
     border: 3px solid orange;
     -webkit-box-shadow: none !important;
@@ -103,7 +103,7 @@
   .bg-dark
   {
     
-    background-color: rgba(0, 0, 0, 0.9) !important;
+    background-color: rgba(0, 0, 0, 0.8) !important;
   }
   .navbar-dark .navbar-nav .nav-link {
     color: orange
